[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/GameOverScript.gd" type="Script" id=1]
[ext_resource path="res://Fonts/StartMenuScreen.tres" type="DynamicFont" id=2]
[ext_resource path="res://Fonts/StartMenuMainText.tres" type="DynamicFont" id=4]

[node name="StartMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="BackgroundColor" type="ColorRect" parent="."]
margin_right = 378.0
margin_bottom = 840.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayAgainButton" type="Button" parent="."]
margin_left = 2.58667
margin_top = 526.521
margin_right = 378.587
margin_bottom = 606.521
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
action_mode = 0
text = "PLAY AGAIN"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackToMainScreenButton" type="Button" parent="."]
margin_left = -14.8697
margin_top = 758.749
margin_right = 187.131
margin_bottom = 835.749
rect_pivot_offset = Vector2( 214.881, -421.387 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
text = "MAIN MENU"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="Sprite" parent="BackToMainScreenButton"]
position = Vector2( 44.5958, 40.1367 )
scale = Vector2( 0.0308824, 0.0308824 )

[node name="Highscore" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 53.4753
margin_top = 276.143
margin_right = 256.475
margin_bottom = 353.143
custom_fonts/font = ExtResource( 2 )
text = "Score: 200"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreAchieved" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 53.6611
margin_top = 176.708
margin_right = 340.661
margin_bottom = 262.708
custom_fonts/font = ExtResource( 2 )
text = "Highscore: 2000"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="PlayAgainButton" to="." method="_on_PlayAgainButton_pressed"]
[connection signal="pressed" from="BackToMainScreenButton" to="." method="_on_BackToMainScreenButton_pressed"]
